# foundationDB-SQLAdaptor

./: README.md
FdbServer/: pom.xml
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/: FdbServerApplication.java
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/adapter/: CalciteUtil.java  FdbDataProcess.java  FdbDataType.java  FdbEnumerator.java  FdbSchema.java  FdbSchemaFactory.java  FdbTable.java  FdbTableFactory.java  FdbTableInfo.java
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/api/: TSDBUpload.java
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/basicop/: FdbTool.java
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/controller/: Controller.java  QueryController.java  UploadController.java
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/entity/: GeoData.java  HeaderData.java  ImgData.java
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/service/: CarService.java  QueryService.java  UploadService.java
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/sqlparser/: SqlIndexFilter.java
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/sqlparser/adapter/: CalciteUtil.java  FdbDataProcess.java  FdbDataType.java  FdbEnumerator.java  FdbProjectRule.java  FdbSchema.java  FdbSchemaFactory.java  FdbStreamEnumerator.java  FdbStreamTable.java  FdbTable.java  (+4 more)
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/test/: AdaptorTest.java  BasicOpTest.java  DemoAdaptorTest.java  IndexManagerTest.java  LogTest.java  MetaDataManagerTest.java  SqlIndexFilterTest.java  SqlParseTest.java  TSDBUploadServiceTest.java  UploadServiceTest.java
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/tsdb/: TSDBUploadService.java
FdbServer/src/main/java/org/sjtu/se/ipads/fdbserver/utils/: InterceptorConfig.java
FdbServer/src/main/resources/: batch_input.json  demo_model.json  input.json  inputmessage.proto  model.json  real_input.json  tsdb_model.json
FdbServer/src/main/resources/protodata/: fieldMessage.proto
FdbServer/src/test/java/org/sjtu/se/ipads/fdbserver/: FdbServerApplicationTests.java
FdbServer/src/test/resources/: index.json  model.json
deployment/fdb_cluster/: docker-compose.yml
deployment/fdb_docker/: Dockerfile  fdb.bash  fdb.cluster  fdb.cluster.bak
deployment/java_docker/: Dockerfile  fdb.cluster  index.json  input.json
deployment/python_docker/: Dockerfile
deployment/python_docker/src/: app.py  car_service.py  service_test.py
fdb/: pom.xml
fdb/src/main/java/com/sjtu/se/ipads/fdb/: FdbApplication.java
fdb/src/test/java/com/sjtu/se/ipads/fdb/: FdbApplicationTests.java
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  service.js
frontend/src/components/: CarCanvas.js  MyMenu.js
frontend/src/service/: dataService.js
frontend/src/utils/: Ajax.js  util.js
frontend/src/view/: CanvasView.js  SQLView.js
serverDemo/: README.md  __init__.py  server.py
serverDemo/basic_ops/: __init__.py  fdb_tool.py
serverDemo/entity/: __init__.py  geo_data.py  header_data.py  img_data.py
serverDemo/repository/: __init__.py  geometry_repo.py  header_repo.py  img_repo.py
serverDemo/service/: __init__.py  car_service.py  client_service.py  data_service.py
serverDemo/sqlparser/: __init__.py  execution_builder.py  token_parser.py
serverDemo/test/: car_service_test.py  fdb_tool_test.py  generate_test_data.py  physical_plan_test.py  repo_api_test.py  sql_parser_test.py
tsfoundationdb/: CMakeLists.txt  RpcServer.cpp
tsfoundationdb/api/: UploadService.cc  UploadService.h
tsfoundationdb/cache/: CacheManager.cc  CacheManager.h  RedisUtils.cc  RedisUtils.h
tsfoundationdb/log/: LogManager.cc  LogManager.h
tsfoundationdb/metadata/: MetaDataManager.cc  MetaDataManager.h
tsfoundationdb/protodata/: FieldMessage.pb.cc  FieldMessage.pb.h  FieldMessage.proto  RpcMessage.grpc.pb.cc  RpcMessage.grpc.pb.h  RpcMessage.pb.cc  RpcMessage.pb.h  RpcMessage.proto
tsfoundationdb/service/: DataService.cc  DataService.h  UploadService.h
tsfoundationdb/storage/: Storage.cc  Storage.h
tsfoundationdb/test/: DataServiceTest.cc  LogManagerTest.cc  MetaDataManagerTest.cc  RedisUtilsTest.cc  StorageTest.cc  TestFramework.h
tsfoundationdb/test/input/: demo.config  test_data.json
(+18 files in other folders)
